NSM: handle SIGTERM for session managers that use it instead of /nsm/client/quit
RaySession (and many other NSM session managers) terminate clients by
sending SIGTERM rather than the /nsm/client/quit OSC message.  Native
C++ apps die on SIGTERM naturally; Java/SWT does not.

Register a SIGTERM handler via sun.misc.Signal (accessed reflectively to
avoid compile-time --add-exports) that dispatches TGExitAction — the same
path as File > Exit — so TuxGuitar closes cleanly when the session is
abandoned, showing the "save before exit?" dialog if there are unsaved
changes.  The quitting flag prevents double-dispatch if both SIGTERM and
/nsm/client/quit arrive.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>